// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Catalog Page Snapshot Tests Desktop View Matches snapshot for "All Products" 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <nav aria-label="Main Navigation">
    <!-- Mobile Menu Toggle Button -->
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li><button data-category="all">Início</button></li>
      <li><button data-category="shoes">Calçados</button></li>
      <li><button data-category="slippers">Chinelos</button></li>
    </ul>
  </nav>

  <main>
    <!-- Category heading (updates based on selection) -->
    <h2 id="category-heading">Todos os Produtos</h2>
    <!-- All products will be rendered inside this container -->
    <ul id="product-list"><li class="product-item">
        <img src="images/shoe1.png" alt="Shoe 1">
        <div class="product-details">
          <h3>Shoe 1</h3>
          <span class="size">Tamanho: M</span>
          <span class="price">R$&nbsp;100,00</span>
        </div>
      </li><li class="product-item">
        <img src="images/slipper1.png" alt="Slipper 1">
        <div class="product-details">
          <h3>Slipper 1</h3>
          
          <span class="price">R$&nbsp;50,00</span>
        </div>
      </li></ul>
  </main>

  <!-- Footer with visible app version -->
  <footer>
    <p>Versão: 1.0.4 - 0.28</p>
  </footer>

  <script src="scripts.js"></script>


"
`;

exports[`Catalog Page Snapshot Tests Desktop View Matches snapshot for "Shoes" 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <nav aria-label="Main Navigation">
    <!-- Mobile Menu Toggle Button -->
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li><button data-category="all">Início</button></li>
      <li><button data-category="shoes">Calçados</button></li>
      <li><button data-category="slippers">Chinelos</button></li>
    </ul>
  </nav>

  <main>
    <!-- Category heading (updates based on selection) -->
    <h2 id="category-heading">Calçados</h2>
    <!-- All products will be rendered inside this container -->
    <ul id="product-list"></ul>
  </main>

  <!-- Footer with visible app version -->
  <footer>
    <p>Versão: 1.0.4 - 0.28</p>
  </footer>

  <script src="scripts.js"></script>


"
`;

exports[`Catalog Page Snapshot Tests Desktop View Matches snapshot for "Slippers" 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <nav aria-label="Main Navigation">
    <!-- Mobile Menu Toggle Button -->
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li><button data-category="all">Início</button></li>
      <li><button data-category="shoes">Calçados</button></li>
      <li><button data-category="slippers">Chinelos</button></li>
    </ul>
  </nav>

  <main>
    <!-- Category heading (updates based on selection) -->
    <h2 id="category-heading">Chinelos</h2>
    <!-- All products will be rendered inside this container -->
    <ul id="product-list"></ul>
  </main>

  <!-- Footer with visible app version -->
  <footer>
    <p>Versão: 1.0.4 - 0.28</p>
  </footer>

  <script src="scripts.js"></script>


"
`;

exports[`Catalog Page Snapshot Tests Mobile View Matches snapshot for "All Products" on mobile 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <nav aria-label="Main Navigation">
    <!-- Mobile Menu Toggle Button -->
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li><button data-category="all">Início</button></li>
      <li><button data-category="shoes">Calçados</button></li>
      <li><button data-category="slippers">Chinelos</button></li>
    </ul>
  </nav>

  <main>
    <!-- Category heading (updates based on selection) -->
    <h2 id="category-heading">Todos os Produtos</h2>
    <!-- All products will be rendered inside this container -->
    <ul id="product-list"></ul>
  </main>

  <!-- Footer with visible app version -->
  <footer>
    <p>Versão: 1.0.4 - 0.28</p>
  </footer>

  <script src="scripts.js"></script>


"
`;

exports[`Catalog Page Snapshot Tests Mobile View Matches snapshot for "Shoes" on mobile 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <nav aria-label="Main Navigation" class="active">
    <!-- Mobile Menu Toggle Button -->
    <button id="menu-toggle" aria-expanded="true" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li><button data-category="all">Início</button></li>
      <li><button data-category="shoes">Calçados</button></li>
      <li><button data-category="slippers">Chinelos</button></li>
    </ul>
  </nav>

  <main>
    <!-- Category heading (updates based on selection) -->
    <h2 id="category-heading">Calçados</h2>
    <!-- All products will be rendered inside this container -->
    <ul id="product-list"><li class="product-item">
        <img src="images/shoe1.png" alt="Shoe 1">
        <div class="product-details">
          <h3>Shoe 1</h3>
          <span class="size">Tamanho: M</span>
          <span class="price">R$&nbsp;100,00</span>
        </div>
      </li><li class="product-item">
        <img src="images/shoe1.png" alt="Shoe 1">
        <div class="product-details">
          <h3>Shoe 1</h3>
          <span class="size">Tamanho: M</span>
          <span class="price">R$&nbsp;100,00</span>
        </div>
      </li><li class="product-item">
        <img src="images/shoe1.png" alt="Shoe 1">
        <div class="product-details">
          <h3>Shoe 1</h3>
          <span class="size">Tamanho: M</span>
          <span class="price">R$&nbsp;100,00</span>
        </div>
      </li><li class="product-item">
        <img src="images/shoe1.png" alt="Shoe 1">
        <div class="product-details">
          <h3>Shoe 1</h3>
          <span class="size">Tamanho: M</span>
          <span class="price">R$&nbsp;100,00</span>
        </div>
      </li><li class="product-item">
        <img src="images/shoe1.png" alt="Shoe 1">
        <div class="product-details">
          <h3>Shoe 1</h3>
          <span class="size">Tamanho: M</span>
          <span class="price">R$&nbsp;100,00</span>
        </div>
      </li></ul>
  </main>

  <!-- Footer with visible app version -->
  <footer>
    <p>Versão: 1.0.4 - 0.28</p>
  </footer>

  <script src="scripts.js"></script>


"
`;

exports[`Catalog Page Snapshot Tests Mobile View Matches snapshot for "Slippers" on mobile 1`] = `
"
  <header>
    <div class="header-logo">
      <img src="images/logo.jpeg" alt="M/A Imports Logo">
    </div>
  </header>

  <nav aria-label="Main Navigation" class="">
    <!-- Mobile Menu Toggle Button -->
    <button id="menu-toggle" aria-expanded="false" aria-controls="nav-menu">☰</button>
    <ul id="nav-menu">
      <li><button data-category="all">Início</button></li>
      <li><button data-category="shoes">Calçados</button></li>
      <li><button data-category="slippers">Chinelos</button></li>
    </ul>
  </nav>

  <main>
    <!-- Category heading (updates based on selection) -->
    <h2 id="category-heading">Chinelos</h2>
    <!-- All products will be rendered inside this container -->
    <ul id="product-list"><li class="product-item">
        <img src="images/slipper1.png" alt="Slipper 1">
        <div class="product-details">
          <h3>Slipper 1</h3>
          
          <span class="price">R$&nbsp;50,00</span>
        </div>
      </li><li class="product-item">
        <img src="images/slipper1.png" alt="Slipper 1">
        <div class="product-details">
          <h3>Slipper 1</h3>
          
          <span class="price">R$&nbsp;50,00</span>
        </div>
      </li><li class="product-item">
        <img src="images/slipper1.png" alt="Slipper 1">
        <div class="product-details">
          <h3>Slipper 1</h3>
          
          <span class="price">R$&nbsp;50,00</span>
        </div>
      </li><li class="product-item">
        <img src="images/slipper1.png" alt="Slipper 1">
        <div class="product-details">
          <h3>Slipper 1</h3>
          
          <span class="price">R$&nbsp;50,00</span>
        </div>
      </li><li class="product-item">
        <img src="images/slipper1.png" alt="Slipper 1">
        <div class="product-details">
          <h3>Slipper 1</h3>
          
          <span class="price">R$&nbsp;50,00</span>
        </div>
      </li><li class="product-item">
        <img src="images/slipper1.png" alt="Slipper 1">
        <div class="product-details">
          <h3>Slipper 1</h3>
          
          <span class="price">R$&nbsp;50,00</span>
        </div>
      </li></ul>
  </main>

  <!-- Footer with visible app version -->
  <footer>
    <p>Versão: 1.0.4 - 0.28</p>
  </footer>

  <script src="scripts.js"></script>


"
`;
